--- a/index.html
+++ b/index.html
@@ -153,19 +153,19 @@
 					<a class="btn btn-default" href="#">BUY NOW</a>
 				</article>
 				<article class="col">
-					<img src="img/product-bottle.jpg" alt="bote" class="img-fluid">
+					<img src="img/product-waispack-2.jpg" alt="bote" class="img-fluid">
 					<h3>RUNNING WAISTPACK BEAN 330X<br>HYDRATION</h3>
 					<h3><span>$38.99</span></h3>
 					<a class="btn btn-default" href="#">BUY NOW</a>
 				</article>
 				<article class="col">
-					<img src="img/product-gloves.jpg" alt="guantes" class="img-fluid">
+					<img src="img/product-backpack.jpg" alt="guantes" class="img-fluid">
 					<h3>SPORTS GEAR WIND BEATER<br>BACKPACK</h3>
 					<h3><span>$43.99</span></h3>
 					<a class="btn btn-default" href="#">BUY NOW</a>
 				</article>
 				<article class="col">
-					<img src="img/product-waistpack.jpg" alt="mochilita" class="img-fluid">
+					<img src="img/product-gloves.jpg" alt="mochilita" class="img-fluid">
 					<h3>THERMAL RUNNING GLOVES<br>ELEMENT</h3>
 					<h3><span>$25.99</span></h3>
 					<a class="btn btn-default" href="#">BUY NOW</a>
